@@ -29,7 +29,15 @@
         <td>Data2</td>
       </tr>
     </table>
-    <img src="images/circle.png">
+    <img src="images/circle.png"/>
+    <p>This is a paragraph.</p>
+    
+    <h1>h1's are cool</h1>
+    <h2>h2's are cool</h2>
+    <h3>h3's are cool</h3>
+    <h4>h4's are cool</h4>
+    <h5>h5's are cool</h5>
+    <h6>h6's are cool</h6>
     <ol>
       <li>Number One</li>
       <li>Number Two</li>
@@ -38,12 +46,6 @@
       <li>Item One</li>
       <li>Item Two</li>
     </ul>
-    <h1>h1's are cool</h1>
-    <h2>h2's are cool</h2>
-    <h3>h3's are cool</h3>
-    <h4>h4's are cool</h4>
-    <h5>h5's are cool</h5>
-    <h6>h6's are cool</h6>
   </div>
 </body>
 </html>
