@@ -3,7 +3,7 @@
     <title>Static Elements Page</title>
   </head>
   <body>
-    <p>Static Elements Page</p>
+    <p id="p_id" name="p_name" class="p_class">Static Elements Page</p>
     <input id="text_field_id" name="text_field_name" class="text_field_class"
            size="40" type="text" />
 
