@@ -209,7 +209,7 @@ class Page
   h5(:h5_xpath, :xpath => '//h5')
   h5(:h5_class_index, :class => 'h5_class', :index => 0)
   h5(:h5_name_index, :name => 'h5_name', :index => 0)
-  
+
   h6(:h6_id, :id => 'h6_id')
   h6(:h6_class, :class => 'h6_class')
   h6(:h6_name, :name => 'h6_name')
@@ -217,4 +217,12 @@ class Page
   h6(:h6_xpath, :xpath => '//h6')
   h6(:h6_class_index, :class => 'h6_class', :index => 0)
   h6(:h6_name_index, :name => 'h6_name', :index => 0)
+
+  paragraph(:p_id, :id => 'p_id')
+  paragraph(:p_class, :class => 'p_class')
+  paragraph(:p_name, :name => 'p_name')
+  paragraph(:p_index, :index => 0)
+  paragraph(:p_xpath, :xpath => '//p')
+  paragraph(:p_class_index, :class => 'p_class', :index => 0)
+  paragraph(:p_name_index, :name => 'p_name', :index => 0)
 end
