@@ -19,3 +19,4 @@ require 'druid/elements/text_area.rb'
 require 'druid/elements/form.rb'
 require 'druid/elements/option.rb'
 require 'druid/elements/heading.rb'
+require 'druid/elements/paragraph.rb'
