@@ -1,0 +1,7 @@
+module Druid
+  module Elements
+    class Paragraph < Element
+      
+    end
+  end
+end
